WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149319
Backdrop Filter should repaint when changed via script
https://bugs.webkit.org/show_bug.cgi?id=149319
Summary
Backdrop Filter should repaint when changed via script
Joseph Pecoraro
Reported
2015-09-17 17:06:19 PDT
* SUMMARY Backdrop Filter should repaint when changed via script. * TEST <style> .back { width: 300px; height: 150px; margin: 100px; background: blue; } .top { width: 1000px; height: 50px; position: absolute; left: 0; top: 150px; -webkit-backdrop-filter: blur(50px); } </style> <div class="back"> <div id="x" class="top"></div> </div> <button id="a">Blur 10</button> <button id="b">Blur -10</button> <button id="c">Blur 50</button> <button id="d">Show / Hide the element</button> <script> a.onclick = function() { x.style.webkitBackdropFilter = "blur(10px)"; } b.onclick = function() { x.style.webkitBackdropFilter = "blur(-10px)"; } c.onclick = function() { x.style.webkitBackdropFilter = "blur(50px)"; } d.onclick = function() { x.hidden = !x.hidden; } </script> * STEPS TO REPRODUCE 1. Show test 2. Click on one of the Blur buttons to change the blur => nothing happens, expected the element to repaint 3. Click the button to hide the blur element 3. Click the button to show the blur element => blur is now updated
Attachments
Testcase
(916 bytes, text/html)
2016-04-01 16:57 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.00 KB, patch)
2016-04-01 16:59 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-17 17:07:06 PDT
<
rdar://problem/22749892
>
Jon Lee
Comment 2
2016-04-01 15:22:29 PDT
***
Bug 155794
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 3
2016-04-01 16:57:10 PDT
Created
attachment 275445
[details]
Testcase
Simon Fraser (smfr)
Comment 4
2016-04-01 16:59:50 PDT
Created
attachment 275446
[details]
Patch
Simon Fraser (smfr)
Comment 5
2016-04-01 17:19:59 PDT
https://trac.webkit.org/r198963
Joseph Pecoraro
Comment 6
2016-04-01 22:30:57 PDT
Nice!
David Kilzer (:ddkilzer)
Comment 7
2016-04-02 01:43:07 PDT
(In reply to
comment #5
)
>
https://trac.webkit.org/r198963
New test is failing on most bots: <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=css3%2Ffilters%2Fbackdrop%2Fdynamic-backdrop-filter-change.html
>
David Kilzer (:ddkilzer)
Comment 8
2016-04-02 02:00:00 PDT
(In reply to
comment #7
)
> (In reply to
comment #5
) > >
https://trac.webkit.org/r198963
> > New test is failing on most bots: > > <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=css3%2Ffilters%2Fbackdrop%2Fdynamic-backdrop-filter-change.html
>
Tried to fix: Committed
r198971
: <
http://trac.webkit.org/r198971
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug