Backdrop Filter should repaint when changed via script https://bugs.webkit.org/show_bug.cgi?id=149319 rdar://problem/22749892

Reviewed by Tim Horton.

Source/WebCore:

When backdrop filters change, we need to trigger a recomposite, just as we do
for filters. It's ok to re-use ContextSensitivePropertyFilter because
adjustStyleDifference() does the right thing.

Test: css3/filters/backdrop/dynamic-backdrop-filter-change.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresLayerRepaint):

LayoutTests:

* css3/filters/backdrop/dynamic-backdrop-filter-change-expected.html: Added.
* css3/filters/backdrop/dynamic-backdrop-filter-change.html: Added.

Canonical link: https://commits.webkit.org/174245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198963 268f45cc-cd09-0410-ab3c-d52691b4dbfc